# pyrite-launcher

./: Cargo.toml  build.rs
src/: main.rs
src/app/: avatars.rs  convert.rs  icons.rs  mod.rs  state.rs  theme.rs  ui.rs
src/app/controllers/: accounts.rs  crashfix.rs  details.rs  instances.rs  launch.rs  mod.rs  modrinth.rs  modupdate.rs  preflight.rs  repair.rs  settings.rs  storage.rs  versions.rs
src/core/: api.rs  assets.rs  config.rs  crash_analyzer.rs  downloader.rs  instance.rs  java.rs  launcher.rs  mod.rs  secrets.rs  storage.rs
themes/: catppuccin_mocha.json  default.json  dracula.json  gruvbox_dark.json  light.json  nord.json
ui/: components.slint  globals.slint  main.slint
ui/views/: accounts.slint  instances.slint  modrinth.slint  play.slint  settings.slint
