[package]
name = "pyrite-launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.16"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
zip = "0.6"
sha1 = { version = "0.10", features = ["std"] }
futures-util = "0.3"
bytes = "1.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
flate2 = "1.0"
tar = "0.4"
toml = "0.8"
open = "5"
# wayland-data-control enables clipboard support on Wayland compositors
# (wlroots/KDE); arboard otherwise only talks to X11.
arboard = { version = "3", features = ["wayland-data-control"] }

[build-dependencies]
slint-build = "1.16"
